# clip_flow

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  settings_schema.json
.claude/: settings.local.json
frontend/: README.md  index.html  settings.html
scripts/: build.py  build_frontend.py  build_python.py
src/adapters/: fuzzy_search_adapter.py  json_settings_adapter.py  json_storage_adapter.py  pyperclip_adapter.py  simple_search_adapter.py  sqlite_storage_adapter.py  system_tray_adapter.py  tkinter_ui_adapter.py
src/adapters/settings/: json_settings_adapter.py  json_settings_schema_adapter.py
src/adapters/ui/: javascript_api.py  pywebview_settings.py  pywebview_ui_adapter.py  settings_window.py  tkinter_ui_adapter.py
src/application/: app_service.py  clipboard_service.py  settings_service.py
src/domain/: __init__.py  app_settings.py  models.py  settings_models.py
src/domain/clipboard/: __init__.py  clipboard_history.py  clipboard_item.py
src/domain/settings/: __init__.py  app_settings.py  boolean_setting.py  float_setting.py  integer_setting.py  setting_definition.py  setting_metadata.py  setting_type.py  settings.py  settings_group.py  slider_setting.py  string_setting.py
src/infrastructure/: container.py  logger.py  system_paths.py
src/ports/: clipboard_port.py  search_port.py  settings_port.py  settings_schema_port.py  storage_port.py  ui_port.py
src/utils/: assets.py
tests/adapters/: test_fuzzy_search_adapter.py  test_sqlite_storage_adapter.py
