[project]
name = "clip-flow"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "pyperclip>=1.9.0",
    "fuzzysearch>=0.8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.11",
]
